@@ -1,0 +1,7 @@
+# This qmake project file is used for internationalization tools.
+# run lupdate to update ts files, linguist to edit the translations
+# and lrelease to generate the qm files
+
+SOURCES      = QtGnuplotWidget.cpp QtGnuplotWindow.cpp
+FORMS        = QtGnuplotSettings.ui
+TRANSLATIONS = po/qtgnuplot_fr.ts
