@@ -108,5 +108,3 @@ int main(int argc, char* argv[])
 
 	return 0;
 }
-
-#include "moc_embed_example.cpp"
