@@ -1,0 +1,144 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.0" language="fr_FR">
+<context>
+    <name>QtGnuplotWidget</name>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="205"/>
+        <source>Export to PDF</source>
+        <translation>Exporter en PDF</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="205"/>
+        <source>PDF files (*.pdf)</source>
+        <translation>Fichiers PDF (*.pdf)</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="227"/>
+        <source>Export to Image</source>
+        <translation>Exporter en image</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="228"/>
+        <source>Image files (*.png *.bmp)</source>
+        <translation>Fichiers image (*.png *.bmp)</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="240"/>
+        <source>Export to SVG</source>
+        <translation>Exporter en SVG</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="240"/>
+        <source>SVG files (*.svg)</source>
+        <translation>Fichiers SVG (*.svg)</translation>
+    </message>
+</context>
+<context>
+    <name>QtGnuplotWindow</name>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="71"/>
+        <source>Qt frontend for gnuplot</source>
+        <translation>Terminal Qt pour gnuplot</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="74"/>
+        <source>Copy to clipboard</source>
+        <translation>Copier dans le presse papier</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="75"/>
+        <source>Print</source>
+        <translation>Imprimer</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="76"/>
+        <source>Export</source>
+        <translation>Exporter</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="77"/>
+        <source>Export to PDF</source>
+        <translation>Exporter en PDF</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="78"/>
+        <source>Export to EPS</source>
+        <translation>Exporter en EPS</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="79"/>
+        <source>Export to SVG</source>
+        <translation>Exporter en SVG</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="80"/>
+        <source>Export to image</source>
+        <translation>Exporter en image</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="81"/>
+        <source>Settings</source>
+        <translation>Préférences</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="98"/>
+        <source>Replot</source>
+        <translation>Redessiner</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="99"/>
+        <source>Show grid</source>
+        <translation>Montrer la grille</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="100"/>
+        <source>Previous zoom</source>
+        <translation>Zoom précédent</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="101"/>
+        <source>Next zoom</source>
+        <translation>Zoom suivant</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="102"/>
+        <source>Autoscale</source>
+        <translation>Échelle automatique</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="132"/>
+        <source>Gnuplot window </source>
+        <translation type="unfinished">Fenêtre gnuplot </translation>
+    </message>
+</context>
+<context>
+    <name>settingsDialog</name>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="14"/>
+        <source>Terminal configuration</source>
+        <translation>Configuration du terminal</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="28"/>
+        <source>Select background color</source>
+        <translation>Sélectrionner la couleur
+d&apos;arrière plan</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="48"/>
+        <source>Sample</source>
+        <translation>Échantillon</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="57"/>
+        <source>Antialias</source>
+        <translation>Antialias</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="64"/>
+        <source>Replot on resize</source>
+        <translation>Redessiner après changement de taille</translation>
+    </message>
+</context>
+</TS>
