@@ -1,3 +1,8 @@
+2009-07-27  Jérôme Lodewyck <lodewyck@users.sourceforge.net>
+
+	* qtterminal/qt_term.cpp qtterminal/QtGnuplot.pro qtterminal/po/*:
+	Add an internationalization framework and a french translation.
+
 2009-07-26  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/color.c (draw_color_smooth_box) src/gadgets.h src/gadgets.c
